--- a/src/components/message/message.scss
+++ b/src/components/message/message.scss
@@ -1,5 +1,81 @@
-.message-text {
-  color: red;
-  filter: drop-shadow(2px 14px 4px red);
-  font-weight: 600;
+.message {
+  position: sticky;
+  top: 15vh;
+  bottom: 15vh;
+  width: 600px;
+  height: 700px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 20px;
+  background: #000000;
+  border-radius: 14px;
+  margin: 0 auto;
+
+  &__text {
+    font-size: 25px;
+    color: red;
+    filter: drop-shadow(2px 14px 4px red);
+    font-weight: 600;
+    text-align: center;
+  }
+
+  &__wrap {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    padding: 20px 0;
+    gap: 10px;
+    overflow-y: scroll;
+    padding: 10px;
+    &-text {
+      font-size: 20px;
+      color: #f10826;
+      padding: 5px 10px;
+      margin: 5px;
+      max-width: 80%;
+      position: relative;
+
+    }
+
+    &-name {
+      position: absolute;
+      top: -20px;
+      font-size: 12px;
+    }
+
+    .user {
+      font-size: 20px;
+      color: #f10826;
+      padding: 5px 10px;
+      margin: 5px;
+      max-width: 80%;
+      position: relative;
+      align-self: flex-end;
+      background: #2e2323;
+      border-radius: 29.9386px 0px 29.9386px 29.9386px;
+      filter: drop-shadow(2px 5px 10px #2e2323);
+      span {
+        right: 0;
+      }
+    }
+
+    .bot {
+      font-size: 20px;
+      color: #f10826;
+      padding: 5px 10px;
+      margin: 5px;
+      max-width: 80%;
+      position: relative;
+      align-self: flex-start;
+      background: #2b2342;
+      border-radius: 0px 29.9386px 29.9386px 29.9386px;
+      filter: drop-shadow(2px 5px 10px #2b2342);
+
+      span {
+        left: 0;
+      }
+    }
+  }
 }
+
