--- a/src/App.scss
+++ b/src/App.scss
@@ -51,7 +51,7 @@
 
 .app-header {
   text-align: center;
-min-height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -71,8 +71,8 @@ min-height: 100vh;
 }
 
 @keyframes fadeIn {
-  from{
-  transform: translateY(0);
+  from {
+    transform: translateY(0);
   }
   to {
     transform: translateY(60vh);
@@ -83,6 +83,25 @@ min-height: 100vh;
 
 .main {
   min-height: 100vh;
+}
+
+.list-wrap {
+  position: absolute;
+  top: 0;
+  left: -245px;
+  min-height: 100%;
+  width: 250px;
+  padding-left: 20px;
+  background: #000000;
+  border-radius: 14px;
+  color: rgba(250, 235, 215, 0.66);
+}
+
+.list-avatar {
+  object-fit: cover;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
 }
 
 
