--- a/src/App.scss
+++ b/src/App.scss
@@ -42,6 +42,10 @@
 
 .app {
   background-color: #121212;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .app-logo {
@@ -51,57 +55,64 @@
 
 .app-header {
   text-align: center;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-
-
-  &__title {
-    font-size: 60px;
-    font-weight: 900;
-    color: #f10826;
-    animation: fadeIn 4s forwards;
-    animation-delay: 2s;
-    animation-iteration-count: 1;
-  }
-}
-
-@keyframes fadeIn {
-  from {
-    transform: translateY(0);
-  }
-  to {
-    transform: translateY(60vh);
-    opacity: 0;
-    display: none;
-  }
-}
-
-.main {
-  min-height: 100vh;
 }
 
 .list-wrap {
-  position: absolute;
-  top: 0;
-  left: -245px;
-  min-height: 100%;
-  width: 250px;
-  padding-left: 20px;
+  width: 500px;
+  padding: 20px;
   background: #000000;
   border-radius: 14px;
   color: rgba(250, 235, 215, 0.66);
+  margin: 65px;
+}
+
+.chat-list {
+  margin: 15px 0;
+}
+
+.chat-link {
+  font-size: 22px;
+  display: flex;
+  align-items: center;
+  color: #f10826;
+  transition: 0.2s ease-in;
+
+  &:hover {
+    filter: drop-shadow(0 0 4px rgba(red, 0.7))
+  }
 }
 
 .list-avatar {
   object-fit: cover;
-  width: 24px;
-  height: 24px;
+  width: 38px;
+  height: 38px;
   border-radius: 50%;
+  margin-right: 20px;
 }
 
+.navigation {
+  display: flex;
+  gap: 35px;
+
+  &__link {
+    font-size: 60px;
+    font-weight: 900;
+    color: #f10826;
+    transition: 0.2s ease-in;
+
+    &:hover {
+      filter: drop-shadow(0 0 4px rgba(red, 0.7))
+    }
+  }
+
+  .active {
+    color: #8e1928;
+  }
+}
 
