--- a/src/App.scss
+++ b/src/App.scss
@@ -45,6 +45,7 @@
    display: flex;
    flex-direction: column;
    align-items: center;
+   position: relative;
 }
 
 .app-logo {
@@ -68,7 +69,7 @@
    background: #000000;
    border-radius: 14px;
    color: rgba(250, 235, 215, 0.66);
-   margin: 65px;
+   margin-top: 65px;
    text-align: center;
 }
 
@@ -125,4 +126,64 @@
 .profile-check {
    color: white;
    font-size: 30px;
+}
+
+.sing-up {
+   position: fixed;
+   top: 0;
+   bottom: 0;
+   left: 0;
+   right: 0;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   background: #121212;
+   z-index: 10;
+   &__form {
+      width: 550px;
+      padding: 20px;
+      background: #9f9191;
+      border-radius: 14px;
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+      font-size: 22px;
+      &-title {
+         margin: 0 auto;
+         font-weight: 700;
+         filter: drop-shadow(2px 14px 4px #0f0707);
+      }
+      &-btn {
+         padding: 8px;
+         margin-top: 10px;
+         font-size: 25px;
+         font-weight: 600;
+         color: #9f9191;
+         background: #270707;
+         border-radius: 14px;
+         &:hover {
+            background: #820909;
+            color: #270707;
+            transition: 0.2s all;
+         }
+      }
+   }
+
+   &__label {
+      display: flex;
+      justify-content: space-between;
+      gap: 5px;
+   }
+   &__input {
+      padding: 10px;
+   }
+}
+.exit{
+   position: absolute;
+   bottom: 0;
+   right: 0;
+   font-size: 60px;
+   font-weight: 900;
+   color: #f10826;
+   transition: 0.2s ease-in;
 }
